--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
   <head>
     <meta charset="UTF-8">
     <title>Landing Page</title>
-    <link rel="stylesheet" href="styles.css">
+    <!--<link rel="stylesheet" href="styles.css">-->
   </head>
   <body>
-    <header>
+    <!--Header and main text-->
+    <div class="header">
       <div class="left">
         <h1>Header Logo</h1>
       </div>
@@ -17,6 +18,73 @@
           <li><a href="#header-link-three">header link three</a>
         </ul>
       </div>
-    </header>
+      <div class="hero-main">
+        <h1 class="hero-main-text">
+          This website is awesome
+        </h1>
+        <p class="hero-secondary-text">
+          This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast
+        </p>
+        <button class="sign-up">
+          Sign up
+        </button>
+        <div class="image-placeholder">
+          this is a placeholder for an image
+        </div>        
+      </div>
+    </div>
+
+    <!--Some random information.-->
+    <div class="section-1">
+      <h1>
+        Some random information.
+      </h1>
+      <div class="container">
+        <div class="info">
+          <!--<img src="./images/barberry.png" alt="barberry">-->
+          <div class="text">this is some subtext under an illustration or image</div>
+        </div>
+        <div class="info">
+          <!--<img src="./images/barberry.png" alt="barberry">-->
+          <div class="text">this is some subtext under an illustration or image</div>
+        </div>
+        <div class="info">
+          <!--<img src="./images/barberry.png" alt="barberry">-->
+          <div class="text">this is some subtext under an illustration or image</div>
+        </div>
+        <div class="info">
+          <!--<img src="./images/barberry.png" alt="barberry">-->
+          <div class="text">this is some subtext under an illustration or image</div>
+        </div>
+      </div>
+    </div>
+
+    <!--Quote-->
+    <div class="section-2">
+      <p class="quote">
+        This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.
+      </p>
+      <p class="quotee">
+        -Thor, God of Thunder
+      </p>
+    </div>
+
+    <!--Call to action-->
+    <div class="section-3">
+      <h1 class="call-to-action-title">
+        Call to action! It's time!
+      </h1>
+      <p class="call-to-action-subtext">
+        Sign up for our product by clicking that button right over there!
+      </p>
+      <button class="sign-up-inverted">
+        Sign up
+      </button>
+    </div>
+
+    <div class="footer">
+      Copyright &#169; The Odin Project 2021
+    </div>
+
   </body>
 </html>
