--- a/index.html
+++ b/index.html
@@ -3,57 +3,61 @@
   <head>
     <meta charset="UTF-8">
     <title>Landing Page</title>
-    <!--<link rel="stylesheet" href="styles.css">-->
+    <link rel="stylesheet" href="styles.css">
   </head>
   <body>
     <!--Header and main text-->
     <div class="header">
-      <div class="left">
-        <h1>Header Logo</h1>
+      <div class="container">
+        <div class="left">
+          <h1>Header Logo</h1>
+        </div>
+        <div class="right">
+          <ul>
+            <li><a href="#header-link-one">header link one</a>
+            <li><a href="#header-link-two">header link two</a>
+            <li><a href="#header-link-three">header link three</a>
+          </ul>
+        </div>
       </div>
-      <div class="right">
-        <ul>
-          <li><a href="#header-link-one">header link one</a>
-          <li><a href="#header-link-two">header link two</a>
-          <li><a href="#header-link-three">header link three</a>
-        </ul>
-      </div>
-      <div class="hero-main">
-        <h1 class="hero-main-text">
-          This website is awesome
-        </h1>
-        <p class="hero-secondary-text">
-          This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast
-        </p>
-        <button class="sign-up">
-          Sign up
-        </button>
+      <div class="hero-container">
+        <div class="hero-main">
+          <h1 class="hero-main-text">
+            This website is awesome
+          </h1>
+          <p class="hero-secondary-text">
+            This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast
+          </p>
+          <button class="sign-up">
+            Sign up
+          </button>      
+        </div>
         <div class="image-placeholder">
           this is a placeholder for an image
-        </div>        
+        </div>  
       </div>
     </div>
 
     <!--Some random information.-->
     <div class="section-1">
-      <h1>
+      <h1 class="information-header">
         Some random information.
       </h1>
-      <div class="container">
+      <div class="section-1-container">
         <div class="info">
-          <!--<img src="./images/barberry.png" alt="barberry">-->
+          <div class="border-image"></div>
           <div class="text">this is some subtext under an illustration or image</div>
         </div>
         <div class="info">
-          <!--<img src="./images/barberry.png" alt="barberry">-->
+          <div class="border-image"></div>
           <div class="text">this is some subtext under an illustration or image</div>
         </div>
         <div class="info">
-          <!--<img src="./images/barberry.png" alt="barberry">-->
+          <div class="border-image"></div>
           <div class="text">this is some subtext under an illustration or image</div>
         </div>
         <div class="info">
-          <!--<img src="./images/barberry.png" alt="barberry">-->
+          <div class="border-image"></div>
           <div class="text">this is some subtext under an illustration or image</div>
         </div>
       </div>
@@ -85,6 +89,5 @@
     <div class="footer">
       Copyright &#169; The Odin Project 2021
     </div>
-
   </body>
 </html>
