--- a/index.html
+++ b/index.html
@@ -64,30 +64,37 @@
     </div>
 
     <!--Quote-->
-    <div class="section-2">
-      <p class="quote">
-        This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.
-      </p>
-      <p class="quotee">
-        -Thor, God of Thunder
-      </p>
+    <div class="quote-section">
+      <div class="quote-container">
+        <p class="quote">
+          This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.
+        </p>
+        <p class="quotee">
+          -Thor, God of Thunder
+        </p>
+      </div>
     </div>
 
     <!--Call to action-->
     <div class="section-3">
-      <h1 class="call-to-action-title">
-        Call to action! It's time!
-      </h1>
-      <p class="call-to-action-subtext">
-        Sign up for our product by clicking that button right over there!
-      </p>
-      <button class="sign-up-inverted">
-        Sign up
-      </button>
+      <div class="blue-background-container">
+        <div>
+          <h1 class="call-to-action-title">
+            Call to action! It's time!
+          </h1>
+          <p class="call-to-action-subtext">
+            Sign up for our product by clicking that button right over there!
+          </p>
+        </div>
+        <button class="sign-up-inverted">
+          Sign up
+        </button>
+      </div>
     </div>
 
+    <!--Footer-->
     <div class="footer">
-      Copyright &#169; The Odin Project 2021
+      Copyright&nbsp; &#169; &nbsp;The Odin Project 2021
     </div>
   </body>
 </html>
